<resources>
    <string name="app_name">二手书屋</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请完善</string>
    <string name="permission_rationale">"需要联系人权限" </string>
    <string name="action_register_name">姓名</string>
    <string name="action_register_contact">手机号</string>
    <string name="error_empty">不能为空</string>
    <string name="title_activity_register">注册</string>
    <string name="book_name">书名</string>
    <string name="book_price">价格</string>
    <string name="send">发布</string>
    <string name="confirm">确定</string>
    <string name="details">详细介绍</string>
</resources>
